# backend/cmd/apiserver/game.go
@@ -4,17 +4,26 @@ import (
 	"sync"
 	"time"
 
+	"github.com/maxmcd/c4/backend/pkg/board"
 	"github.com/maxmcd/c4/backend/pkg/models"
 )
 
 type Game struct {
 	Id                 string
+	Board              board.Board
 	RedUser            models.User
 	BlackUser          models.User
 	CreatedAt          time.Time
+	ClockStart         *time.Time
+	Resigned           *uint
 	RedTimeRemaining   time.Duration
 	BlackTimeRemaining time.Duration
+	TimeControl        time.Duration
 }
+
+// func (g *Game) ClockSwitch() Board {
+
+// }
 
 type GameStore struct {
 	syncMap sync.Map
@@ -28,6 +37,8 @@ func (g *GameStore) Create(id string, redUser models.User, blackUser models.User
 		CreatedAt:          time.Now(),
 		RedTimeRemaining:   time.Minute,
 		BlackTimeRemaining: time.Minute,
+		TimeControl:        time.Minute,
+		Board:              board.Board{},
 	})
 }
 
